Updated README.md with app screenshots